# naive-bayes

./: .gitignore  CMakeLists.txt
header/: data_aggregator.h  data_manager.h  image_features.h  model.h
src/: classifier_main.cpp  data_aggregator.cpp  data_manager.cpp  image_features.cpp  model.cpp
test/: data_aggregator_test.cpp  image_features_test.cpp  model_test.cpp
